# lambda-packer

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TODO  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
.jit/: jit-plan.yml
lambda_packer/: cli.py  config.py  file_utils.py  package_utils.py
samples/: package_config.yaml
samples/billing/: handler.py
samples/common/: utils.py
samples/reporting/: handler.py
src/lambda_packer/: cli.py  config.py  dist_layout.py  planner.py
src/lambda_packer/builders/: buildkit.py  dockerfile_gen.py
src/lambda_packer/exporters/: oci.py  zip.py
tests/: test_cli.py  test_config.py  test_dockerfile.py  test_dockerfile_gen.py  test_oci_exporter.py  test_package_utils.py  test_planner.py  test_template_utils.py
