[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-packer"
version='0.1.59'
description = "A tool to package Python AWS Lambda functions with zips, Docker containers, and layers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "calvernaz" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
urls = { Homepage = "https://github.com/calvernaz/lambda-packer", Repository = "https://github.com/calvernaz/lambda-packer", Issues = "https://github.com/calvernaz/lambda-packer/issues" }

dependencies = [
    "Click",
    "PyYAML",
    "docker>=4.4.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "black", "twine", "bump2version"]

[project.scripts]
lambda-packer = "lambda_packer.cli:cli"

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
